Change boilerplate and template to Foundation for faster and easier style handling

--- a/index.html
+++ b/index.html
@@ -1,36 +1,16 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-        <title>Binary Calculator</title>
-        <link href="//fonts.googleapis.com/css?family=Droid+Sans:400,700" media="screen" rel="stylesheet" type="text/css">
-        <link href="css/toolkit.css" rel="stylesheet" type="text/css">
-        <link href="css/style.css" rel="stylesheet" type="text/css">
-        <script src="js/toolkit.js"></script>
-    </head>
-    <body>
-        <!-- 2 columns -->
-        <div class="grid">
-            <div class="col span-3">
-                <div class="tabs tabs--horizontal grid">
-                    <nav class="tab-nav col span-4" data-tab-nav>
-                        <ul>
-                            <li><a href="#one">First</a></li>
-                            <li><a href="#two">Second</a></li>
-                            <li><a href="#three">Third</a></li>
-                        </ul>
-                    </nav>
-
-                    <div class="col span-8">
-                        <section class="tab-section show" data-tab-section>...</section>
-                        <section class="tab-section hide" data-tab-section>...</section>
-                        <section class="tab-section hide" data-tab-section>...</section>
-                    </div>
-                </div>
-            </div>
-            <div class="col span-9">...</div>
-        </div>
-    </body>
+<!doctype html>
+<html class="no-js" lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Binary Calculator</title>
+    <link rel="stylesheet" href="css/foundation.css" />
+    <script src="js/vendor/modernizr.js"></script>
+  </head>
+  <body>
+    <script src="js/foundation.min.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
+  </body>
 </html>
