--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
-<!doctype html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Binary Calculator</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <script src="js/vendor/modernizr.js"></script>
-  </head>
-  <body>
-    <script src="js/foundation.min.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
-  </body>
+<!DOCTYPE html>
+<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
+<html class="no-js" lang="en" >
+<head>
+  <meta charset="utf-8">
+  <!-- If you delete this meta tag World War Z will become a reality -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Binary Calculator</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/foundation.css">
+  <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/main.css">
+  <script src="js/vendor/modernizr.js"></script>
+</head>
+
+<body>
+
+  <ul class="tabs vertical" data-tab>
+    <li class="tab-title active"><a href="#panel11">Tab 1</a></li>
+    <li class="tab-title"><a href="#panel21">Tab 2</a></li>
+    <li class="tab-title"><a href="#panel31">Tab 3</a></li>
+    <li class="tab-title"><a href="#panel41">Tab 4</a></li>
+  </ul>
+
+
+  <div class="tabs-content">
+
+    <div class="content active" id="panel11" aria-hidden="true">
+    
+      <div class="custom-panel">
+        <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe natus, consequuntur laborum.</h5>
+        <p>It has an easy to override visual style, and is appropriately subdued.</p>
+      </div>
+
+    </div>
+    <div class="content" id="panel21">
+      <p>This is the second panel of the basic tab example. This is the second panel of the basic tab example.</p>
+    </div>
+    <div class="content" id="panel31">
+      <p>This is the third panel of the basic tab example. This is the third panel of the basic tab example.</p>
+    </div>
+    <div class="content" id="panel41">
+      <p>This is the fourth panel of the basic tab example. This is the fourth panel of the basic tab example.</p>
+    </div>
+
+  </div>
+
+  <script src="js/vendor/jquery.js"></script>
+  <script src="js/foundation.min.js"></script>
+  <script>
+    $(document).foundation();
+  </script>
+
+</body>
+
 </html>
