--- a/index.html
+++ b/index.html
@@ -77,8 +77,41 @@
         
       </div>
     </div>
+
+
+
     <div class="content" id="panel21">
-      <p>This is the second panel of the basic tab example. This is the second panel of the basic tab example.</p>
+      <div class="custom-panel">
+
+            <form>
+              <div class="row">
+              <p>Enter any floating point decimal or floating point binary value into its corresponding field. The converted base will be generated automatically. The selected amount of bits will represent the precision of the binary value.</p>
+                <div class="large-4 columns">
+                  <label>Floating point decimal
+                    <input type="number" placeholder="A floating point decimal number e.g. 42.42" value="956.511"/>
+                  </label>
+                </div>
+                <div class="large-3 columns">
+                  <label>Amount of bits used
+                    <select>
+                      <option value="8">8</option>
+                      <option value="16">16</option>
+                      <option value="32">32</option>
+                      <option value="64">64</option>
+                    </select>
+                  </label>
+                </div>
+                <div class="large-4 columns">
+                  <label>Floating point binary
+                    <input type="number" placeholder="A floating point binary number e.g. 101.10" />
+                  </label>
+                </div>
+                <a href="#" class="button info bExplanation">What is happening?</a>
+              </div>
+            </form>
+
+        </div>
+        
     </div>
     <div class="content" id="panel31">
       <p>This is the third panel of the basic tab example. This is the third panel of the basic tab example.</p>
